# assistant

./: LICENSE  pyproject.toml
assistant/: gpt.py
