[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
openai = "^0.27.0"
langchain = "^0.0.100"
google-api-python-client = "^2.80.0"
transformers = "^4.26.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
